--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="google-site-verification" content="GGRmK7cWBz-wrnYCJxKcz0OYvBc4wG8gTF-1rrBmHVM" />
 	<meta name="theme-color" content="#000000" />
 	<meta name="description" content="Dieu-Donne Nazzah" />
 	<link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
